# judger-rs

./: .gitignore  Cargo.toml  Makefile
demo/: main.c
src/: lib.rs  main.rs
