[package]
name = "judger-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.144"
seccomp = {git = "https://github.com/polachok/seccomp" } 
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
